--- a/OrangeLine/CMakeLists.txt
+++ b/OrangeLine/CMakeLists.txt
@@ -38,14 +38,13 @@ target_sources(OrangeLine
 )
 
 target_include_directories(OrangeLine PRIVATE 
-	${SOURCE_DIR}/src 
-	# ${CMAKE_CURRENT_LIST_DIR}
+    ${SOURCE_DIR}/src 
 )
 
 target_compile_options(OrangeLine 
-	PRIVATE 
-	$<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-enum-enum-conversion>
-	$<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-enum-float-conversion>
+    PRIVATE 
+    $<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-enum-enum-conversion>
+    $<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-enum-float-conversion>
 )
 
 set_property(TARGET OrangeLine PROPERTY CXX_STANDARD 20)
@@ -54,9 +53,9 @@ set_property(TARGET OrangeLine PROPERTY CXX_STANDARD 20)
 #########################################################
 # Step 4: call create_plugin()
 create_plugin(
-    SOURCE_LIB      OrangeLine                  # This is the cmake target name (defined in add_target)
-    PLUGIN_NAME     OrangeLine                  # This must match the brand "slug" used in VCV Rack
+    SOURCE_LIB      OrangeLine                          # This is the cmake target name (defined in add_target)
+    PLUGIN_NAME     OrangeLine                          # This must match the brand "slug" used in VCV Rack
     PLUGIN_JSON     ${SOURCE_DIR}/plugin.json           # Path to the plugin.json file used by VCV Rack
     SOURCE_ASSETS   ${CMAKE_CURRENT_LIST_DIR}/assets    # Path to the assets/ dir containing the PNGs
-    DESTINATION     ${CMAKE_CURRENT_LIST_DIR}/../metamodule-plugins/OrangeLine # Path to where you want the plugin dir output: it can be shared between multiple plugins
+    DESTINATION     ${CMAKE_CURRENT_LIST_DIR}/../metamodule-plugins   # Dir where you want the plugin .mmplugin file
 )
