--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -19,6 +19,11 @@ on:
           - VCV-Fundamental
           - Valley
           - "./"
+      do_release:
+        description: 'Create Release'
+        required: true
+        default: false
+        type: boolean
       linux_x64:
         description: 'Build on Linux'
         required: true
@@ -83,11 +88,11 @@ jobs:
           cmake --build build
 
       - name: Set Release Version
-        if: startsWith(github.ref, 'refs/tags/release-')
+        if: ${{ inputs.do_release }}
         uses: FranzDiebold/github-env-vars-action@v2
 
       - name: Release
-        if: startsWith(github.ref, 'refs/tags/release-')
+        if: ${{ inputs.do_release }}
         uses: softprops/action-gh-release@v1
         with:
           name: "Release: ${{ env.CI_REF_NAME }}"
