--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -119,6 +119,11 @@ jobs:
         uses: carlosperate/arm-none-eabi-gcc-action@v1
         with:
           release: '12.2.Rel1'
+          
+      - name: Git setup
+        run: |
+          git config --global --add safe.directory '*'
+          git config --global core.longpaths true
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -127,7 +132,6 @@ jobs:
 
       - name: Build
         run: |
-          git config --global core.longpaths true
           cd ${{ inputs.plugin }}
           cmake -B build -G Ninja
           cmake --build build
