Add RebelTech to CI release

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -16,6 +16,7 @@ on:
           - kocmoc
           - NANO
           - OrangeLine
+          - RebelTech
           - VCV-Fundamental
           - Valley
           - "./"
