--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -21,7 +21,7 @@ on:
           - Valley
           - "./"
       do_release:
-        description: 'Create Release'
+        description: 'Create Release (must also tag!)'
         required: true
         default: false
         type: boolean
@@ -84,7 +84,7 @@ jobs:
         uses: FranzDiebold/github-env-vars-action@v2
 
       - name: Release
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/') && ${{ inputs.do_release }}
         uses: softprops/action-gh-release@v1
         with:
           name: "Release: ${{ env.CI_REF_NAME }}"
