--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -73,15 +73,17 @@ jobs:
           sudo apt-get update
           sudo apt-get install ninja-build
 
+      - name: Set Release Version
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: FranzDiebold/github-env-vars-action@v2
+
       - name: Build
         run: |
           cd ${{ inputs.plugin }}
           cmake -B build -G Ninja
           cmake --build build
 
-      - name: Set Release Version
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: FranzDiebold/github-env-vars-action@v2
+          for f in *.mmplugin; do mv $f ${f%.mmplugin}-${{ env.CI_REF_NAME }}.mmplugin; done;
 
       - name: Release
         if: startsWith(github.ref, 'refs/tags/') && ${{ inputs.do_release }}
