Enable more modules

--- a/Sapphire/CMakeLists.txt
+++ b/Sapphire/CMakeLists.txt
@@ -23,10 +23,18 @@ set(SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/sapphire)
 target_sources(Sapphire
     PRIVATE
     ${SOURCE_DIR}/src/elastika_vcv.cpp
-
     ${SOURCE_DIR}/src/mesh_physics.cpp
     ${SOURCE_DIR}/src/mesh_hex.cpp
     ${SOURCE_DIR}/src/sapphire_globals.cpp
+
+    ${SOURCE_DIR}/src/frolic_vcv.cpp
+    ${SOURCE_DIR}/src/galaxy_vcv.cpp
+    ${SOURCE_DIR}/src/glee_vcv.cpp
+    ${SOURCE_DIR}/src/hiss_vcv.cpp
+    ${SOURCE_DIR}/src/moots_vcv.cpp
+    ${SOURCE_DIR}/src/nucleus_vcv.cpp
+    ${SOURCE_DIR}/src/pivot_vcv.cpp
+    ${SOURCE_DIR}/src/polynucleus_vcv.cpp
 
 	firmware-stubs.cc
     plugin.cpp 
