--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "metamodule-plugin-sdk"]
 	path = metamodule-plugin-sdk
-	url = git@github.com:4ms/metamodule-plugin-sdk
+	url = https://github.com/4ms/metamodule-plugin-sdk
 [submodule "Valley/ValleyRackFree"]
 	path = Valley/ValleyRackFree
 	url = https://github.com/4ms/ValleyRackFree.git
