Add Sapphire to CI build

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -17,6 +17,7 @@ on:
           - NANO
           - OrangeLine
           - RebelTech
+          - Sapphire
           - VCV-Fundamental
           - Valley
           - "./"
