--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -81,6 +81,7 @@ jobs:
 
       - name: Build
         run: |
+          mkdir -p metamodule-plugins
           cd ${{ inputs.plugin }}
           cmake -B build -G Ninja -DMETAMODULE_SDK_DIR=../metamodule-plugin-sdk -DINSTALL_DIR=../metamodule-plugins
           cmake --build build
