--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -12,6 +12,7 @@ on:
           - Bogaudio
           - chowdsp
           - CountModula
+          - CVfunc
           - DrumKit
           - Geodesics
           - kocmoc
