Fix CVfunk typo

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -12,7 +12,7 @@ on:
           - Bogaudio
           - chowdsp
           - CountModula
-          - CVfunc
+          - CVfunk
           - DrumKit
           - Geodesics
           - kocmoc
